machine: verdin-imx8mp: remove Ivy from mainline
Until we have the patches for Ivy on mainline kernel for Verdin-iMX8MP
on BSP7, remove Ivy to avoid failing the build.

Signed-off-by: João Paulo Gonçalves <joao.goncalves@toradex.com>
(cherry picked from commit ea2f4c8b7ad58a21eae1bfe0446d81f5c12d04b6)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -34,13 +34,9 @@ KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
 "
-KERNEL_DEVICETREE:use-mainline-bsp = " \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dahlia.dtb \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dev.dtb \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-yavia.dtb \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dahlia.dtb \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dev.dtb \
-    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
+KERNEL_DEVICETREE:remove:use-mainline-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-ivy.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-ivy.dtb \
 "
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
