--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -36,7 +36,9 @@ KERNEL_DEVICETREE = " \
 "
 KERNEL_DEVICETREE:remove:use-mainline-bsp = " \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-ivy.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-ivy.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-mallow.dtb \
 "
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
