machine: apalis-imx8: add new apalis imx8 pids
Add the new Apalis iMX8 pids to the machine configuration file.

Related-to: ELB-5958
Signed-off-by: Stefan Eichenberger <stefan.eichenberger@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -92,10 +92,15 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
     apalis-imx8_spi2_spidev_overlay.dtbo \
 "
 
-TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067"
+TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067 0091 0092 0093 0094 0095"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0047] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0048] = "imx8qp-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0049] = "imx8qp-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0067] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0091] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0092] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0093] = "imx8qp-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0094] = "imx8qp-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0095] = "imx8qm-apalis-v1.1-eval.dtb"
 
