machine: toradex-smarc-imx95: set oei target board
Set Optional Execution Image target board to Toradex SMARC iMX95 SoM.

Related-to: ELB-6004
Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -43,7 +43,7 @@ ATF_PLATFORM = "imx95"
 OEI_CONFIGS = "ddr tcm"
 OEI_CORE   = "m33"
 OEI_SOC    = "mx95"
-OEI_BOARD  ?= "mx95lp5"
+OEI_BOARD  ?= "toradex-smarc-imx95"
 DDR_TYPE   ?= "lpddr5"
 
 DDR_FIRMWARE_NAME = " \
