machine: toradex-smarc-imx95: add dev board toradex device tree
Add Toradex SMARC development board device tree to the OE machine, as
its DT is now available in the downstream kernel.

Signed-off-by: João Paulo Gonçalves <joao.goncalves@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -18,10 +18,10 @@ IMX_DEFAULT_BSP = "nxp"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 KERNEL_IMAGETYPE:mx95-generic-bsp = "Image.gz"
 
-# TODO once available change to the SMARC iMX95 list of device trees
 KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     ${KERNEL_DTB_PREFIX}imx95-19x19-verdin-lt8912.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-toradex-smarc-dev.dtb \
 "
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
