machine: toradex-smarc-imx95: set imx system manager configuration
Set imx System Manager configuration for Toradex SMARC iMX95 SoM.
SRCREV is set to AUTOREV instead of using a fixed SHA.
This is a temporary solution because the current tools do not
automatically point SRCREV to the latest commit.

Related-to: ELB-6013
Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -55,8 +55,7 @@ DDR_FIRMWARE_NAME = " \
 
 IMXBOOT_VARIANT = ""
 
-# TODO set config used with toradex-smarc-imx95
-SYSTEM_MANAGER_CONFIG = "mx95evk"
+SYSTEM_MANAGER_CONFIG = "tdx-smarc-imx95"
 # The System Manager Firmware Name corresponds to a particular binary implementation
 # in the Yocto deploy folder. The name is comprised of the Firmware Basename and the
 # default system manager Config name, e.g., m33_image-mx95evk.bin and
@@ -64,7 +63,7 @@ SYSTEM_MANAGER_CONFIG = "mx95evk"
 # The System Manager Firmware Basename is an alias used by imx-boot instead of using
 # a unique name for each implementation, e.g., m33_image.bin for i.MX 95
 SYSTEM_MANAGER_FIRMWARE_BASENAME ?= "m33_image"
-SYSTEM_MANAGER_FIRMWARE_NAME ?= "m33_image-mx95evk"
+SYSTEM_MANAGER_FIRMWARE_NAME ?= "m33_image-tdx-smarc-imx95"
 
 # We have to disable SERIAL_CONSOLE due to auto-serial-console
 SERIAL_CONSOLES = "115200;ttyLP0"
