--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -29,8 +29,7 @@ PREFERRED_VERSION_u-boot-toradex = "2024.04%"
 UBOOT_SUFFIX = "bin"
 SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_MAKE_TARGET = ""
-# TODO once available change to the SMARC iMX95 defconfig
-UBOOT_CONFIG_BASENAME = "imx95_19x19_verdin"
+UBOOT_CONFIG_BASENAME = "toradex-smarc-imx95"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "${UBOOT_CONFIG_BASENAME}_defconfig"
