machine: toradex-smarc-imx95: deploy boot.scr
Create and deploy the boot.scr file into the boot partition.
This enables using U-Boot's standard boot feature to boot the
OS.

Related-to: ELB-6204
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -38,6 +38,10 @@ IMXBOOT_TARGETS = "flash_a55"
 IMX_BOOT_SOC_TARGET = "iMX95"
 IMX_BOOT_SEEK = "32"
 
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
+PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
+
 ATF_PLATFORM = "imx95"
 OEI_CONFIGS = "ddr tcm"
 OEI_CORE   = "m33"
