--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -34,6 +34,11 @@ UBOOT_CONFIG_BASENAME = "toradex-smarc-imx95"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "${UBOOT_CONFIG_BASENAME}_defconfig"
 
+UBOOT_DTB_LOADADDRESS:mx95-generic-bsp = "0x9c400000"
+UBOOT_DTBO_LOADADDRESS:mx95-generic-bsp = "0x9c440000"
+UBOOT_ENTRYPOINT:mx95-generic-bsp = "0x94400000"
+UBOOT_RD_LOADADDRESS = "0x9c800000"
+
 IMXBOOT_TARGETS = "flash_a55"
 IMX_BOOT_SOC_TARGET = "iMX95"
 IMX_BOOT_SEEK = "32"
