machine: toradex-smarc-imx8mp: Add default overlays
Add the overlays used as defaults for the machine. In the case of the
Toradex SMARC iMX8MP, the default overlays are DSI-to-HDMI and SPIDEV.

Related-to: ELB-6063
Signed-off-by: João Paulo Gonçalves <joao.goncalves@toradex.com>

--- a/conf/machine/toradex-smarc-imx8mp.conf
+++ b/conf/machine/toradex-smarc-imx8mp.conf
@@ -96,8 +96,13 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-# TODO set overlay list applyed by default
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = ""
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
+    toradex-smarc-imx8mp_dsi-to-hdmi_overlay.dtbo \
+    toradex-smarc-imx8mp_spi0-cs0_spidev_overlay.dtbo \
+    toradex-smarc-imx8mp_spi0-cs1_spidev_overlay.dtbo \
+    toradex-smarc-imx8mp_spi1-cs0_spidev_overlay.dtbo \
+    toradex-smarc-imx8mp_spi1-cs1_spidev_overlay.dtbo \
+"
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
