--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -84,8 +84,11 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-# TODO set overlay list applyed by default
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
+    toradex-smarc-imx95_spi0-cs0_spidev_overlay.dtbo \
+    toradex-smarc-imx95_spi0-cs1_spidev_overlay.dtbo \
+    toradex-smarc-imx95_spi1-cs0_spidev_overlay.dtbo \
+    toradex-smarc-imx95_spi1-cs1_spidev_overlay.dtbo \
 "
 
 TORADEX_PRODUCT_IDS = "0096"
