machines: set 'tdx' as MACHINEOVERRIDES
The 'tdx' override was previously set by DISTROOVERRIDES in
meta-toradex-distro. Since these overrides are machine-related, move
them to MACHINEOVERRIDES in meta-toradex-nxp.

Related-to: ELB-6231
Signed-off-by: Hiago De Franco <hiago.franco@toradex.com>

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -4,7 +4,7 @@
 #@DESCRIPTION: Machine configuration for Toradex Colibri iMX6 ULL 1GB (eMMC) SOM
 #@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
 
-MACHINEOVERRIDES =. "mx6:mx6ul:mx6ull:"
+MACHINEOVERRIDES =. "tdx:mx6:mx6ul:mx6ull:"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv7a/tune-cortexa7.inc
