--- a/conf/machine/colibri-imx7.conf
+++ b/conf/machine/colibri-imx7.conf
@@ -1,2 +1,3 @@
 # cope with renamed machine file in meta-freescale-3rdparty
+MACHINEOVERRIDES =. "tdx:"
 require conf/machine/colibri-imx7-nand.conf
