--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -5,7 +5,7 @@
 
 MACHINE_NAME = "Colibri-iMX8X"
 
-MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
+MACHINEOVERRIDES =. "tdx:mx8:mx8x:mx8qxp:"
 
 MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
 
