--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -6,7 +6,7 @@
 
 MACHINE_NAME = "Verdin-iMX8MM"
 
-MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
+MACHINEOVERRIDES =. "tdx:mx8:mx8m:mx8mm:"
 
 MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
 
