--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -7,7 +7,7 @@ MACHINE_NAME = "Apalis-iMX8"
 
 SOC_SILICON_REV ?= ""
 
-MACHINEOVERRIDES =. "mx8:mx8qm:"
+MACHINEOVERRIDES =. "tdx:mx8:mx8qm:"
 
 MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
 
