--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -6,7 +6,7 @@
 
 MACHINE_NAME = "SMARC-iMX95"
 
-MACHINEOVERRIDES =. "mx95:"
+MACHINEOVERRIDES =. "tdx:mx95:"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
