--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -6,7 +6,7 @@
 
 MACHINE_NAME = "Verdin-iMX8MP"
 
-MACHINEOVERRIDES =. "mx8:mx8m:mx8mp:"
+MACHINEOVERRIDES =. "tdx:mx8:mx8m:mx8mp:"
 
 MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
 
