--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -11,7 +11,7 @@ MACHINEOVERRIDES =. "tdx:mx95:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
 
-MACHINE_FEATURES += "pci wifi bluetooth optee"
+MACHINE_FEATURES += "pci wifi bluetooth optee tpm2"
 
 IMX_DEFAULT_BSP = "nxp"
 
