imx-oei: convert imx-oei bbappend into imx-oei-toradex recipe
Replace our current bbappend with an specific recipe for
imx-oei-toradex. This will allow us to to drop the current "tdx:"
override, have the recipe under meta-toradex-nxp specifically for
Toradex hardware and set the "use-head-next" override for our nightly
builds.

Most of the recipe was copied from meta-freescale imx-oei recipe.

Related-to: ELB-6294
Signed-off-by: Hiago De Franco <hiago.franco@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -48,6 +48,8 @@ WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 ATF_PLATFORM = "imx95"
+
+PREFERRED_PROVIDER_virtual/imx-oei = "imx-oei-toradex"
 OEI_CONFIGS = "ddr tcm"
 OEI_CORE   = "m33"
 OEI_SOC    = "mx95"
