imx-system-manager: convert bbappend into imx-sm-toradex recipe
Replace our current bbappend with an specific recipe for iMX System
Manager for Toradex hardware (imx-sm-toradex). This will allow us to to
drop the current "tdx:" override, have the recipe under meta-toradex-nxp
specifically for Toradex hardware and set the "use-head-next" override
for our nightly builds.

Most of the recipe was copied from meta-freescale imx-system-manager
recipe.

Related-to: ELB-6294
Signed-off-by: Hiago De Franco <hiago.franco@toradex.com>
(cherry picked from commit 1715e453e26d207783dc23d40f6c7dc4934ed068)

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -65,6 +65,7 @@ DDR_FIRMWARE_NAME = " \
 
 IMXBOOT_VARIANT = ""
 
+PREFERRED_PROVIDER_virtual/imx-system-manager = "imx-sm-toradex"
 SYSTEM_MANAGER_CONFIG = "tdx-smarc-imx95"
 # The System Manager Firmware Name corresponds to a particular binary implementation
 # in the Yocto deploy folder. The name is comprised of the Firmware Basename and the
