machine: toradex-smarc-imx95: Support IW611 WiFi chipset
Add out-of-tree NXP WLAN drivers that are necessary to support the IW611
used on the Toradex SMARC iMX95, along with the required firmware.

Add btnxpuartconf to MACHINE_EXTRA_RRECOMMENDS to configure the btnxpuart
kernel module properly (i.e., load moal before btnxpuart, see
btnxpuartconf).

Related-to: ELB-6324
Signed-off-by: Ernest Van Hoecke <ernest.vanhoecke@toradex.com>
(cherry picked from commit eb833c26ff2545ab01382a03926af799b2475f05)

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -8,6 +8,11 @@ MACHINE_NAME = "SMARC-iMX95"
 
 MACHINEOVERRIDES =. "tdx:mx95:"
 
+# The IW611 chip is supported by the out-of-tree NXP WLAN driver and requires a
+# workaround specified by btnxpuartconf to work together with btnxpuart
+MACHINE_EXTRA_RRECOMMENDS:append = " kernel-module-nxp-wlan btnxpuartconf"
+MACHINE_FIRMWARE:append = " linux-firmware-nxpiw612-sdio"
+
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
 
