--- a/conf/machine/toradex-smarc-imx8mp.conf
+++ b/conf/machine/toradex-smarc-imx8mp.conf
@@ -87,7 +87,7 @@ TEE_LOAD_ADDR = "0xbe000000"
 UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 
 # handle machine firmware
-MACHINE_FIRMWARE:append = " linux-firmware-sd8997 linux-firmware-nxp8997-sdio"
+MACHINE_FIRMWARE:append = " linux-firmware-nxp8997-sdio"
 MACHINE_FIRMWARE:remove = "firmware-sof-imx"
 
 IMAGE_CLASSES:append = " image_type_tezi"
