verdin-imx95: Use LPDDR_FW_VERSION
The version of the LPDDR FW now differs from the default version
specified by the mkimage Makefile. Therefore, we have to pass the
correct version of the FW we install to mkimage to be able to build.

The LPDDR_FW_VERSION variable is used for this by imx-boot recipe in
meta-freescale.

Related-to: ELB-6342
Fixes: 7f65ae077797 ("verdin-imx95: add machine")
Signed-off-by: Ernest Van Hoecke <ernest.vanhoecke@toradex.com>
(cherry picked from commit 6980a5e91e17ac4e24c47ceb5fdaddea011f089b)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -61,11 +61,12 @@ OEI_SOC    = "mx95"
 OEI_BOARD  ?= "toradex-verdin-imx95"
 DDR_TYPE   ?= "lpddr4x"
 
+LPDDR_FW_VERSION = "_v202409"
 DDR_FIRMWARE_NAME = " \
-    lpddr4x_dmem_v202409.bin \
-    lpddr4x_dmem_qb_v202409.bin \
-    lpddr4x_imem_v202409.bin \
-    lpddr4x_imem_qb_v202409.bin \
+    lpddr4x_dmem${LPDDR_FW_VERSION}.bin \
+    lpddr4x_dmem_qb${LPDDR_FW_VERSION}.bin \
+    lpddr4x_imem${LPDDR_FW_VERSION}.bin \
+    lpddr4x_imem_qb${LPDDR_FW_VERSION}.bin \
 "
 
 IMXBOOT_VARIANT = ""
