--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -34,7 +34,7 @@ PREFERRED_VERSION_u-boot-toradex = "2024.04%"
 UBOOT_SUFFIX = "bin"
 SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_MAKE_TARGET = ""
-UBOOT_CONFIG_BASENAME = "toradex-smarc-imx95"
+UBOOT_CONFIG_BASENAME = "verdin-imx95"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "${UBOOT_CONFIG_BASENAME}_defconfig"
