machine: verdin-imx95: Add Dahlia, Ivy, Mallow and Yavia device trees
Add Dahlia, Ivy, Mallow and Yavia device trees to verdin-imx95 configuration.

Related-to: ELB-6343
Signed-off-by: Ernest Van Hoecke <ernest.vanhoecke@toradex.com>
(cherry picked from commit 68b6b20bfa48cb968a8e714fa9861e187fb2fe17)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -25,8 +25,16 @@ KERNEL_IMAGETYPE:mx95-generic-bsp = "Image.gz"
 
 KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx95-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-wifi-ivy.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-wifi-mallow.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-wifi-yavia.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-ivy.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-mallow.dtb \
+    ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-yavia.dtb \
 "
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
