toradex-smarc-imx95: Use LPDDR_FW_VERSION
meta-freescale updated imx-boot to NXP BSP 6.12.3_1.0.0.
The version of the LPDDR FW now differs from the default version
specified by the imx-mkimage Makefile. Therefore, we have to pass the
correct version of the FW we install to mkimage to be able to build.

The LPDDR_FW_VERSION variable is used for this by imx-boot recipe in
meta-freescale.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 801db01e5990d6bec3c6f295556045c6ed99ae86)

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -61,11 +61,12 @@ OEI_SOC    = "mx95"
 OEI_BOARD  ?= "toradex-smarc-imx95"
 DDR_TYPE   ?= "lpddr5"
 
+LPDDR_FW_VERSION = "_v202311"
 DDR_FIRMWARE_NAME = " \
-    lpddr5_dmem_v202311.bin \
-    lpddr5_dmem_qb_v202311.bin \
-    lpddr5_imem_v202311.bin \
-    lpddr5_imem_qb_v202311.bin \
+    lpddr5_dmem${LPDDR_FW_VERSION}.bin \
+    lpddr5_dmem_qb${LPDDR_FW_VERSION}.bin \
+    lpddr5_imem${LPDDR_FW_VERSION}.bin \
+    lpddr5_imem_qb${LPDDR_FW_VERSION}.bin \
 "
 
 IMXBOOT_VARIANT = ""
