machine: toradex-smarc-imx8mp: add 0206 to 0210 PID4
Add the new PID4 support:
 - 0206 SMARC iMX8M Plus Quad 4GB IT
 - 0207 SMARC iMX8M Plus Quad 2GB WB IT
 - 0208 SMARC iMX8M Plus Quad 2GB IT
 - 0209 SMARC iMX8M Plus Quadlite 1GB WB ET
 - 0210 SMARC iMX8M Plus Quadlite 1GB ET

Related-to: ELB-6449
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>
(cherry picked from commit df780c246b206fc579714adda3b3808d0aec2679)

--- a/conf/machine/toradex-smarc-imx8mp.conf
+++ b/conf/machine/toradex-smarc-imx8mp.conf
@@ -105,4 +105,4 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
-TORADEX_PRODUCT_IDS = "0097"
+TORADEX_PRODUCT_IDS = "0097 0206 0207 0208 0209 0210"
