machine: toradex-smarc-imx95: add 0201 to 0205 PID4
Add the new PID4 support:
 - 0201 SMARC iMX95 Hexa 8GB IT
 - 0202 SMARC iMX95 Hexa 4GB WB IT
 - 0203 SMARC iMX95 Hexa 4GB ET
 - 0204 SMARC iMX95 Hexa 2GB WB IT
 - 0205 SMARC iMX95 Hexa 2GB ET

Related-to: ELB-6466
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -99,4 +99,4 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
     toradex-smarc-imx95_spi1-cs1_spidev_overlay.dtbo \
 "
 
-TORADEX_PRODUCT_IDS = "0096"
+TORADEX_PRODUCT_IDS = "0096 0201 0202 0203 0204 0205"
