--- a/conf/machine/toradex-smarc-imx8mp.conf
+++ b/conf/machine/toradex-smarc-imx8mp.conf
@@ -11,7 +11,7 @@ MACHINEOVERRIDES =. "tdx:mx8:mx8m:mx8mp:"
 MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
 
 IMX_DEFAULT_BSP = "nxp"
-IMX_DEFAULT_BSP:upstream = ""
+IMX_DEFAULT_BSP:upstream = "mainline"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
@@ -73,13 +73,16 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen tpm2 usbgadge
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = ""
-PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = ""
-PREFERRED_VERSION_linux-toradex-upstream = ""
-PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = ""
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 PREFERRED_VERSION_linux-imx-headers = "6.6"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
+PREFERRED_VERSION_u-boot-toradex = "2024.07%"
+# With mainline distro and/or use-head-next build mainline U-Boot
+PREFERRED_VERSION_u-boot-toradex:use-head-next = "mainline"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 # variables to control imx-boot with u-boot
 ATF_LOAD_ADDR = "0x920000"
 IMX_EXTRA_FIRMWARE = "firmware-imx-8m"
@@ -102,7 +105,5 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
     toradex-smarc-imx8mp_spi1-cs0_spidev_overlay.dtbo \
     toradex-smarc-imx8mp_spi1-cs1_spidev_overlay.dtbo \
 "
-
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
 TORADEX_PRODUCT_IDS = "0097 0206 0207 0208 0209 0210"
