--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,4 +26,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     freescale-3rdparty \
     toradex-bsp-common-layer \
 "
-LAYERSERIES_COMPAT_toradex-nxp-layer = "walnascar whinlatter"
+LAYERSERIES_COMPAT_toradex-nxp-layer = "whinlatter"
