machine: verdin-imx95: update SYSTEM_MANAGER_CONFIG
Rename SYSTEM_MANAGER_CONFIG from tdx-verdin-imx95 to verdin-imx95
to align with latest Toradex iMX System Manager config file name.

Related-to: ELB-6550
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>
(cherry picked from commit 9720e6502872edc14fb39cd30719e5cb415a7c63)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -80,7 +80,7 @@ DDR_FIRMWARE_NAME = " \
 IMXBOOT_VARIANT = ""
 
 PREFERRED_PROVIDER_virtual/imx-system-manager = "imx-sm-toradex"
-SYSTEM_MANAGER_CONFIG = "tdx-verdin-imx95"
+SYSTEM_MANAGER_CONFIG = "verdin-imx95"
 # The System Manager Firmware Name corresponds to a particular binary implementation
 # in the Yocto deploy folder. The name is comprised of the Firmware Basename and the
 # default system manager Config name, e.g., m33_image-mx95evk.bin and
