machine: verdin-imx95: update SYSTEM_MANAGER_FIRMWARE_NAME
Fix missing update to SYSTEM_MANAGER_FIRMWARE_NAME while updating
SYSTEM_MANAGER_CONFIG.

Without this change, the firmware file reference is incorrect and not
found.

Related-to: ELB-6550
Fixes: 9720e6502872 ("machine: verdin-imx95: update SYSTEM_MANAGER_CONFIG")
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>
(cherry picked from commit aa182eced38122831442c7e5a4093e5025348e5e)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -88,7 +88,7 @@ SYSTEM_MANAGER_CONFIG = "verdin-imx95"
 # The System Manager Firmware Basename is an alias used by imx-boot instead of using
 # a unique name for each implementation, e.g., m33_image.bin for i.MX 95
 SYSTEM_MANAGER_FIRMWARE_BASENAME ?= "m33_image"
-SYSTEM_MANAGER_FIRMWARE_NAME ?= "m33_image-tdx-verdin-imx95"
+SYSTEM_MANAGER_FIRMWARE_NAME ?= "m33_image-verdin-imx95"
 
 # We have to disable SERIAL_CONSOLE due to auto-serial-console
 SERIAL_CONSOLES = "115200;ttyLP2"
