machine: toradex-smarc-imx95: fix ramdisk load address for FIT image
Move the ramdisk load address 32MB ahead to prevent a memory overlap
between the kernel FIT image and the ramdisk. This is relevant when a
FIT image is in use such as with the Secure Boot images.

Originally the ramdisk (present inside the kernel FIT image) had a load
address of 0x9c800000 which was the same address where the FIT image
itself was loaded (as set by the ramdisk_addr_r variable in the U-Boot
environment) causing the following error during boot:

  ## Loading kernel from FIT Image at 9c800000 ...
     Using 'conf-freescale_imx95-toradex-smarc-dev.dtb' configuration
     Verifying Hash Integrity ... sha256,rsa2048:dev+ OK
     Trying 'kernel-1' kernel subimage
       Description:  Linux kernel
       Type:         Kernel Image
       Compression:  gzip compressed
       Data Start:   0x9c8000f0
       Data Size:    11490846 Bytes = 11 MiB
       Architecture: AArch64
       OS:           Linux
       Load Address: 0x94400000
       Entry Point:  0x94400000
       Hash algo:    sha256
       Hash value:   6ab94247f1d57073...
     Verifying Hash Integrity ... sha256+ OK
  ## Loading ramdisk from FIT Image at 9c800000 ...
     Using 'conf-freescale_imx95-toradex-smarc-dev.dtb' configuration
     Verifying Hash Integrity ... sha256,rsa2048:dev+ OK
     Trying 'ramdisk-1' ramdisk subimage
       Description:  initramfs-ostree-torizon-image
       Type:         RAMDisk Image
       Compression:  uncompressed
       Data Start:   0x9d331c90
       Data Size:    13004129 Bytes = 12.4 MiB
       Architecture: AArch64
       OS:           Linux
       Load Address: 0x9c800000
       Entry Point:  unavailable
       Hash algo:    sha256
       Hash value:   88544e571c46aea0...
     Verifying Hash Integrity ... sha256+ OK
  Error: ramdisk overwritten

With the change in this commit, the memory layout when a FIT image is in
use becomes this:

0x94400000 (2G+324.00M): kernel load address
0x9c400000 (

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -46,7 +46,7 @@ UBOOT_CONFIG[sd] = "${UBOOT_CONFIG_BASENAME}_defconfig"
 UBOOT_DTB_LOADADDRESS:mx95-generic-bsp = "0x9c400000"
 UBOOT_DTBO_LOADADDRESS:mx95-generic-bsp = "0x9c440000"
 UBOOT_ENTRYPOINT:mx95-generic-bsp = "0x94400000"
-UBOOT_RD_LOADADDRESS = "0x9c800000"
+UBOOT_RD_LOADADDRESS = "0x9e800000"
 
 IMXBOOT_TARGETS = "flash_a55"
 IMX_BOOT_SOC_TARGET = "iMX95"
