--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -8,6 +8,10 @@ MACHINE_NAME = "Verdin-iMX95"
 
 MACHINEOVERRIDES =. "tdx:mx95:"
 
+# Soon, when more of these SoMs are using B0, the below will be removed
+# to inherit the weak default B0 from meta-freescale
+IMX_SOC_REV:${MACHINE} ?= "A0"
+
 # The IW611 chip is supported by the out-of-tree NXP WLAN driver and requires a
 # workaround specified by btnxpuartconf to work together with btnxpuart
 MACHINE_EXTRA_RRECOMMENDS:append = " kernel-module-nxp-wlan btnxpuartconf"
