machine: verdin-imx95: enable full system reset and power-off in ATF
Without a full system reset the bootloader is not reloaded on reboot, and
without a full system power-off the CTRL_PWR_EN_MOCI signal is not
deasserted, which means that the board is not fully powered off.

Enable full system reset and power-off, instead of cpu cluster level
reset and power-off, in ATF.

Related-to: ELB-6688 TEI-1286
Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>
(cherry picked from commit c9adcf79c74b4f22b11352f20b5386fa4e45a485)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -61,6 +61,7 @@ WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 ATF_PLATFORM = "imx95"
+ATF_SYS_PWR_FULL_CTRL = "1"
 
 PREFERRED_PROVIDER_virtual/imx-oei = "imx-oei-toradex"
 OEI_CONFIGS = "ddr tcm"
