verdin-imx95: switch to imx95 B0
Switch the default build to generate i.MX95 B0 images.

The A0/A1 images can still be built by uncommenting the
IMX_SOC_REV:${MACHINE} ?= "A0" in the machine configuration file.

Related-to: ELB-6652
Signed-off-by: Ernest Van Hoecke <ernest.vanhoecke@toradex.com>
(cherry picked from commit a3b746dedfdf28510c00461a842e7767ddcde3aa)

--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -8,9 +8,10 @@ MACHINE_NAME = "Verdin-iMX95"
 
 MACHINEOVERRIDES =. "tdx:mx95:"
 
-# Soon, when more of these SoMs are using B0, the below will be removed
-# to inherit the weak default B0 from meta-freescale
-IMX_SOC_REV:${MACHINE} ?= "A0"
+# The weak default is B0 from meta-freescale
+# Override to A0 to build for A0/A1 silicon versions
+# Verdin iMX95 V1.0A uses A1 silicon version
+# IMX_SOC_REV:${MACHINE} ?= "A0"
 
 # The IW611 chip is supported by the out-of-tree NXP WLAN driver and requires a
 # workaround specified by btnxpuartconf to work together with btnxpuart
