linux-toradex-imx: rename recipe
Rename the recipe which builds a downstream NXP based kernel targeting
i.MX SoC from linux-toradex to linux-toradex-imx.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 9e6a061742cb7111242bfe409094e3fc7f0e1f48)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -79,8 +79,8 @@ SERIAL_CONSOLES = "115200;ttymxc2"
 
 MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen tpm2 usbgadget usbhost vfat wifi"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
+PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex-imx"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream"
 PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
