--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -77,8 +77,8 @@ PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream"
 PREFERRED_VERSION_linux-imx-headers = "6.6"
 
-IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-PREFERRED_VERSION_u-boot-toradex = "2025.04%"
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
+IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot-toradex"
 PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "fsl-imx8qm-apalis.dts"
