--- a/conf/machine/aquila-imx95.conf
+++ b/conf/machine/aquila-imx95.conf
@@ -25,8 +25,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     ${KERNEL_DTB_PREFIX}imx95-aquila-dev.dtb \
 "
 
-IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-PREFERRED_VERSION_u-boot-toradex = "2025.04%"
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
 UBOOT_SUFFIX = "bin"
 SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_MAKE_TARGET = ""
