--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -42,8 +42,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     ${KERNEL_DTB_PREFIX}imx95-verdin-nonwifi-yavia.dtb \
 "
 
-IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-PREFERRED_VERSION_u-boot-toradex = "2025.04%"
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
 UBOOT_SUFFIX = "bin"
 SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_MAKE_TARGET = ""
