--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -75,6 +75,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex-imx"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
 IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot-toradex"
