--- a/conf/machine/toradex-osm-imx93.conf
+++ b/conf/machine/toradex-osm-imx93.conf
@@ -61,8 +61,8 @@ SERIAL_CONSOLES = "115200;ttyLP0"
 
 MACHINE_FEATURES += "wifi bluetooth optee tpm2"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
+PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex-imx"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 PREFERRED_VERSION_u-boot-toradex = "2024.04%"
