--- a/conf/machine/lino-imx93.conf
+++ b/conf/machine/lino-imx93.conf
@@ -60,8 +60,8 @@ SERIAL_CONSOLES = "115200;ttyLP2"
 
 MACHINE_FEATURES += "wifi bluetooth optee tpm2"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
+PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex-imx"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 PREFERRED_VERSION_u-boot-toradex = "2024.04%"
