machine: toradex-osm-imx93: fix bootloader provider
Change bootloader provider from u-boot-toradex to u-boot-toradex-imx to
match the current recipe structure on master branch.

Remove PREFERRED_VERSION since u-boot-toradex-imx provides only a single
version.

Related-to: ELB-6717
Fixes: 1d5e360488bb ("machine: Add Toradex OSM iMX93 support")
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>

--- a/conf/machine/toradex-osm-imx93.conf
+++ b/conf/machine/toradex-osm-imx93.conf
@@ -64,8 +64,7 @@ MACHINE_FEATURES += "wifi bluetooth optee tpm2"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex-imx"
 
-IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-PREFERRED_VERSION_u-boot-toradex = "2024.04%"
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
 
 IMAGE_CLASSES:append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
