--- a/conf/machine/aquila-imx95.conf
+++ b/conf/machine/aquila-imx95.conf
@@ -11,7 +11,7 @@ MACHINEOVERRIDES =. "tdx:mx95:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
 
-MACHINE_EXTRA_RRECOMMENDS:append = " linux-firmware-ath12k linux-firmware-qca"
+MACHINE_EXTRA_RRECOMMENDS:append = " linux-firmware-ath12k-wcn7850 linux-firmware-qca"
 
 MACHINE_FEATURES += "pci wifi bluetooth optee tpm2"
 
