machine: lino-imx93: Add default overlays
Add the overlays used as defaults for the machine.
For Lino IMX93, these are: DSI to HDMI, SPI1 and SPI2 as spidev.

Related-to: ELB-6728
Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>

--- a/conf/machine/lino-imx93.conf
+++ b/conf/machine/lino-imx93.conf
@@ -72,6 +72,10 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = ""
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
+    lino-imx93_dsi-to-hdmi_overlay.dtbo \
+    lino-imx93_spi1_spidev_overlay.dtbo \
+    lino-imx93_spi2_spidev_overlay.dtbo \
+"
 
 TORADEX_PRODUCT_IDS = "0217"
