machine: toradex-osm-imx93: add dsi-to-hdmi and spi overlays
Use the dsi-to-hdmi, spia and spib overlays by default.

Related-to: ELB-6719
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>
(cherry picked from commit c5876d4b10705391b1b8504bb794d683a2bd1196)

--- a/conf/machine/toradex-osm-imx93.conf
+++ b/conf/machine/toradex-osm-imx93.conf
@@ -71,6 +71,10 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = ""
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
+    toradex-osm-imx93_dsi-to-hdmi_overlay.dtbo \
+    toradex-osm-imx93_spia_spidev_overlay.dtbo \
+    toradex-osm-imx93_spib_spidev_overlay.dtbo \
+"
 
 TORADEX_PRODUCT_IDS = "0219"
