machine: apalis-imx8: Add spidev overlay files
Add spidev overlay file to upstream distro.

Related-to: ELB-6739
Signed-off-by: Francesco Dolcini <francesco.dolcini@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -104,7 +104,10 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
     apalis-imx8_spi1_spidev_overlay.dtbo \
     apalis-imx8_spi2_spidev_overlay.dtbo \
 "
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = " \
+    apalis-imx8_spi1_spidev_overlay.dtbo \
+    apalis-imx8_spi2_spidev_overlay.dtbo \
+"
 
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067 0091 0092 0093 0094 0095"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
