--- a/conf/machine/aquila-imx95.conf
+++ b/conf/machine/aquila-imx95.conf
@@ -52,7 +52,7 @@ ATF_PLATFORM = "imx95"
 ATF_SYS_PWR_FULL_CTRL = "1"
 
 PREFERRED_PROVIDER_virtual/imx-oei = "imx-oei-toradex"
-OEI_CONFIGS = "ddr tcm"
+OEI_CONFIGS = "ddr"
 OEI_CORE   = "m33"
 OEI_SOC    = "mx95"
 OEI_BOARD  ?= "toradex-aquila-imx95"
