--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -54,7 +54,7 @@ PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 ATF_PLATFORM = "imx95"
 
 PREFERRED_PROVIDER_virtual/imx-oei = "imx-oei-toradex"
-OEI_CONFIGS = "ddr tcm"
+OEI_CONFIGS = "ddr"
 OEI_CORE   = "m33"
 OEI_SOC    = "mx95"
 OEI_BOARD  ?= "toradex-smarc-imx95"
