arm: toradex-smarc-imx95: direct assign KERNEL_DEVICETREE
Device tree is the same for both upstream and downstream builds,
no override necessary.

Related-to: ELB-6435
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -24,7 +24,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
 KERNEL_IMAGETYPE:mx95-generic-bsp = "Image.gz"
 
 KERNEL_DTB_PREFIX = "freescale/"
-KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx95-toradex-smarc-dev.dtb \
 "
 
