machine: toradex-smarc-imx95: support tdx-xwayland-upstream distro
Add the necessary support to enable the tdx-xwayland-upstream distro
build for SMARC iMX95.

OP-TEE and NXP WLAN support are excluded as the OP-TEE recipe does not
support mainline BSP and the WLAN driver is not yet available upstream.

Related-to: ELB-6435
Signed-off-by: Vitor Soares <vitor.soares@toradex.com>

--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -10,17 +10,23 @@ MACHINEOVERRIDES =. "tdx:mx95:"
 
 # The IW611 chip is supported by the out-of-tree NXP WLAN driver and requires a
 # workaround specified by btnxpuartconf to work together with btnxpuart
-MACHINE_EXTRA_RRECOMMENDS:append = " kernel-module-nxp-wlan btnxpuartconf"
+# Excluded from upstream distro as driver is not yet available
+MACHINE_EXTRA_RRECOMMENDS:append:use-nxp-bsp = " kernel-module-nxp-wlan btnxpuartconf"
 MACHINE_FIRMWARE:append = " linux-firmware-nxpiw612-sdio"
+PREFERRED_RPROVIDER_linux-firmware-nxpiw612-sdio = "firmware-nxp-wifi"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
 
-MACHINE_FEATURES += "pci wifi bluetooth optee tpm2"
+# OP-TEE only for NXP BSP - not yet integrated in upstream U-Boot binman
+MACHINE_FEATURES += "pci wifi bluetooth tpm2"
+MACHINE_FEATURES:append:use-nxp-bsp = " optee"
 
 IMX_DEFAULT_BSP = "nxp"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-imx"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 KERNEL_IMAGETYPE:mx95-generic-bsp = "Image.gz"
 
 KERNEL_DTB_PREFIX = "freescale/"
@@ -29,6 +35,8 @@ KERNEL_DEVICETREE = " \
 "
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex-imx"
+IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot-toradex"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 UBOOT_SUFFIX = "bin"
 SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_MAKE_TARGET = ""
