machine: aquila-imx95: Add Clover carrier board support
Add Aquila iMX95 Clover carrier board device tree.

Related-to: ELB-6758
Signed-off-by: Antoine Gouby <antoine.gouby@toradex.com>
(cherry picked from commit b3203b4c8436632ef66b13c64d8151c6503c3fbf)

--- a/conf/machine/aquila-imx95.conf
+++ b/conf/machine/aquila-imx95.conf
@@ -22,6 +22,7 @@ KERNEL_IMAGETYPE:mx95-generic-bsp = "Image.gz"
 
 KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE:append:use-nxp-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx95-aquila-clover.dtb \
     ${KERNEL_DTB_PREFIX}imx95-aquila-dev.dtb \
 "
 
