machines: toradex: update maintainer in machines
This reflects that maintenance responsibility is now shared and
tracked at team level rather than on specific individuals.

Related-to: ELB-6858
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@NAME: Toradex Apalis iMX8
 #@DESCRIPTION: Toradex Apalis iMX8 powered by a i.MX 8QuadMax SoC
-#@MAINTAINER: Stefan Agner <stefan.agner@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Apalis-iMX8"
 
