--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex Colibri iMX6ULL 1GB (eMMC)
 #@SOC: i.MX6ULL
 #@DESCRIPTION: Machine configuration for Toradex Colibri iMX6 ULL 1GB (eMMC) SOM
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINEOVERRIDES =. "tdx:mx6:mx6ul:mx6ull:"
 
