--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@NAME: Toradex Colibri iMX8X
 #@DESCRIPTION: Toradex Colibri iMX8X powered by a i.MX 8X SoC
-#@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Colibri-iMX8X"
 
