--- a/conf/machine/lino-imx93.conf
+++ b/conf/machine/lino-imx93.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex Lino iMX93
 #@SOC: i.MX93
 #@DESCRIPTION: Machine configuration for Toradex Lino i.MX93 SoM
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Lino-iMX93"
 
