--- a/conf/machine/toradex-osm-imx93.conf
+++ b/conf/machine/toradex-osm-imx93.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex OSM iMX93
 #@SOC: i.MX93
 #@DESCRIPTION: Machine configuration for Toradex OSM i.MX93 SoM
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "OSM-iMX93"
 
