--- a/conf/machine/toradex-smarc-imx95.conf
+++ b/conf/machine/toradex-smarc-imx95.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex SMARC iMX95
 #@SOC: i.MX 95
 #@DESCRIPTION: Machine configuration for Toradex Toradex SMARC i.MX95
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "SMARC-iMX95"
 
