--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex Verdin iMX8M Mini
 #@SOC: i.MX8MM
 #@DESCRIPTION: Machine configuration for Toradex Verdin iMX8M Mini SoM
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Verdin-iMX8MM"
 
