--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex Verdin iMX8M Plus
 #@SOC: i.MX8MP
 #@DESCRIPTION: Machine configuration for Toradex Verdin iMX8M Plus SoM
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Verdin-iMX8MP"
 
