--- a/conf/machine/verdin-imx95.conf
+++ b/conf/machine/verdin-imx95.conf
@@ -2,7 +2,7 @@
 #@NAME: Toradex Verdin iMX95
 #@SOC: i.MX 95
 #@DESCRIPTION: Machine configuration for Toradex Verdin i.MX95
-#@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
+#@MAINTAINER: Toradex Linux BSP Team <linux-bsp@toradex.com>
 
 MACHINE_NAME = "Verdin-iMX95"
 
