--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -46,7 +46,8 @@ KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "apalis-imx8_defconfig,sdcard"
+UBOOT_CONFIG[sd] = "apalis-imx8_defconfig"
+UBOOT_CONFIG_IMAGE_FSTYPES[sd] = "sdcard"
 
 UBOOT_ENTRYPOINT = "0x96000000"
 UBOOT_DTB_LOADADDRESS = "0x83000000"
