--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -41,7 +41,8 @@ KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig,sdcard"
+UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig"
+UBOOT_CONFIG_IMAGE_FSTYPES[sd] = "sdcard"
 
 UBOOT_ENTRYPOINT = "0x96000000"
 UBOOT_DTB_LOADADDRESS = "0x83100000"
