--- a/conf/machine/toradex-osm-imx93.conf
+++ b/conf/machine/toradex-osm-imx93.conf
@@ -25,7 +25,8 @@ KERNEL_DEVICETREE = " \
 KERNEL_IMAGETYPE:mx93-generic-bsp = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "toradex-osm-imx93_defconfig,sdcard"
+UBOOT_CONFIG[sd] = "toradex-osm-imx93_defconfig"
+UBOOT_CONFIG_IMAGE_FSTYPES[sd] = "sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 UBOOT_DTB_LOADADDRESS:mx93-generic-bsp = "0x9c400000"
