--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -37,7 +37,8 @@ KERNEL_DEVICETREE = " \
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "verdin-imx8mp_defconfig,sdcard"
+UBOOT_CONFIG[sd] = "verdin-imx8mp_defconfig"
+UBOOT_CONFIG_IMAGE_FSTYPES[sd] = "sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 UBOOT_DTB_LOADADDRESS:mx8mp-generic-bsp = "0x50200000"
